--- a/2-semantic-transformers/semantic_search.ipynb
+++ b/2-semantic-transformers/semantic_search.ipynb
@@ -35,10 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4b72b3ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "使用的計算裝置: cuda\n"
+     ]
+    }
+   ],
    "source": [
     "# 環境設置：檢查 GPU 可用性並設置計算裝置\n",
     "import torch\n",
@@ -49,10 +57,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "46256f22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "模型載入完成\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SentenceTransformer(\n",
+       "  (0): Transformer({'max_seq_length': 256, 'do_lower_case': False}) with Transformer model: BertModel \n",
+       "  (1): Pooling({'word_embedding_dimension': 384, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False, 'pooling_mode_weightedmean_tokens': False, 'pooling_mode_lasttoken': False, 'include_prompt': True})\n",
+       "  (2): Normalize()\n",
+       ")"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 載入預訓練模型\n",
     "# all-MiniLM-L6-v2 是一個輕量級模型，在效能和速度上取得良好平衡\n",
@@ -66,10 +96,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c467c6a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "開始載入數據集...\n",
+      "數據準備完成\n",
+      "\n",
+      "示例文檔:\n",
+      "The presence of communication amid scientific minds was equally important to the success of the Manhattan Project as scientific intellect was. The only cloud hanging over the impressive achievement of the atomic researchers and engineers is what their success truly meant; hundreds of thousands of innocent lives obliterated.\n",
+      "\n",
+      "示例查詢:\n",
+      "abeyance legal definition ma\n"
+     ]
+    }
+   ],
    "source": [
     "# 載入並準備數據\n",
     "# MS MARCO 是微軟發布的大規模機器閱讀理解和問答數據集\n",
@@ -116,10 +161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b00dc6e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "開始建立向量索引...\n",
+      "向量維度: 384\n",
+      "索引建立完成\n"
+     ]
+    }
+   ],
    "source": [
     "import faiss\n",
     "\n",
@@ -146,10 +201,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3f3ffbab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "開始執行搜尋...\n",
+      "\n",
+      "搜尋結果示例：\n",
+      "\n",
+      "查詢 1: abeyance legal definition ma\n",
+      "   結果 1\n",
+      "\t距離: 0.4080\n",
+      "\t文檔: Freebase(0.00 / 0 votes)Rate this definition: Abeyance is a state of expectancy in respect of property, titles or office, when the right to them is not vested in any one person, but awaits the appearance or determination of the true owner.\n",
+      "   結果 2\n",
+      "\t距離: 0.4314\n",
+      "\t文檔: Legal Definition of abeyance. 1  1 : a lapse in the succession of property during which there is no person in whom title to the property is vested —usually used with in the estate was in abeyance.\n",
+      "\n",
+      "查詢 2: how to listen to offline mode on pandora\n",
+      "   結果 1\n",
+      "\t距離: 0.3602\n",
+      "\t文檔: To avoid using your mobile data, you have the option to manually enable the Offline Listening option. 1  Go to your Station List or the Pandora Home Screen. 2  Tap the Menu icon > Offline Mode. 3  Here you can toggle the Offline Listening feature ON (green).\n",
+      "   結果 2\n",
+      "\t距離: 0.4026\n",
+      "\t文檔: Back To Top. Turn Offline Listening On. To avoid using your mobile data, you have the option to manually enable the Offline Listening option. Go to your Station List or the Pandora Home Screen. Tap the Menu icon > Offline Mode. Here you can toggle the Offline Listening feature ON (green).\n",
+      "\n",
+      "查詢 3: how to transfer nvme m.2\n",
+      "   結果 1\n",
+      "\t距離: 0.9725\n",
+      "\t文檔: NVMe is a communications interface/protocol developed specially for SSDs by a consortium of vendors including Intel, Samsung, Sandisk, Dell, and Seagate. Like SCSI and SATA, NVMe is designed to take advantage of the unique properties of pipeline-rich, random access, memory-based storage.ote that NVMe via M.2 isn’t 3.3 times faster than SATA. But if you pay the money, you’re going to want your SSD to be all it can be. At least I would. That means an expansion card drive until SFF-8639 connectors show up on consumer PCs.\n",
+      "   結果 2\n",
+      "\t距離: 0.9947\n",
+      "\t文檔: Samsung adding NVMe PCIe technology to M.2 SSDs. The diminutive SM951-NVMe will be the industry's first M.2 solid-state drive to make use of the speedy technology, which will blow away SATA-based SSDs.By Sean Portnoy for Laptops & Desktops |.he performance jump Samsung claims for the SM951-NVMe over SATA-based M.2 SSDs is remarkable.\n",
+      "\n",
+      "查詢 4: geographical atmosphere definition\n",
+      "   結果 1\n",
+      "\t距離: 0.5234\n",
+      "\t文檔: atmosphere definition: The definition of atmosphere is an overall feeling and/or effect of a place, specially if it is an environment of pleasure or interest. (noun) An example of atmosphere is the creepy feeling one gets whenever they walk past the old...\n",
+      "   結果 2\n",
+      "\t距離: 0.5554\n",
+      "\t文檔: An atmosphere (from Greek ἀτμός (atmos), meaning vapour, and σφαῖρα (sphaira), meaning sphere) is a layer of gases surrounding a planet or other material body, that is held in place by the gravity of that body.\n",
+      "\n",
+      "查詢 5: bank of tucson routing number\n",
+      "   結果 1\n",
+      "\t距離: 0.1943\n",
+      "\t文檔: Bank Of Tucson Routing Number. 122105676 routing number is a 9-digit number designed and assigned to Bank Of Tucson by The American Bankers Association (ABA) to identify the financial institution upon which a payment was drawn.\n",
+      "   結果 2\n",
+      "\t距離: 0.2374\n",
+      "\t文檔: BANK OF TUCSON ROUTING ABA NUMBER. 122105676 routing number is a 9-digit number designed and assigned to Bank Of Tucson by The American Bankers Association (ABA) to identify the financial institution upon which a payment was drawn.\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import util\n",
@@ -196,16 +301,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "07f82640",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "f-string expression part cannot include a backslash (1930430608.py, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[7], line 10\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'使用設備: {\\\"GPU\\\" if torch.cuda.is_available() else \\CPU\\'}')\u001b[0m\n\u001b[0m                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m f-string expression part cannot include a backslash\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "搜尋效能統計：\n",
+      "總處理時間: 14.00 秒\n",
+      "平均每次查詢時間: 1.40 毫秒\n",
+      "查詢總數: 10000\n",
+      "批次大小: 8\n",
+      "使用設備: GPU\n",
+      "向量維度: 384\n"
      ]
     }
    ],
