change generator from BERT to T5 and GPT

--- a/3-rag/customized.ipynb
+++ b/3-rag/customized.ipynb
@@ -1,36 +1,167 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a73ed71e",
+   "metadata": {},
+   "source": [
+    "# RAG Pipeline 比較實驗\n",
+    "\n",
+    "這個筆記本展示了使用不同生成模型（T5 和 GPT）的 RAG pipeline 的比較。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "466199a3",
+   "id": "d43442a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "from datasets import load_dataset\n",
-    "from customized import CustomRAGPipeline"
+    "import yaml\n",
+    "from customized import run_rag_pipeline_t5, run_rag_pipeline_gpt, load_config\n",
+    "from util import scrape_and_chunk_website"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9a60b14e",
+   "id": "e35ab6ad",
    "metadata": {},
    "source": [
-    "### 使用 SoundCloud Addresses Terms of Use Allowing AI Training on Uploaded Music 文章"
+    "## 載入配置文件"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f08fabc1",
+   "id": "a4af110a",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded configuration:\n",
+      "\n",
+      "Generation parameters:\n",
+      "do_sample: true\n",
+      "early_stopping: true\n",
+      "length_penalty: 1.0\n",
+      "max_new_tokens: 128\n",
+      "min_length: 20\n",
+      "no_repeat_ngram_size: 3\n",
+      "num_beams: 3\n",
+      "repetition_penalty: 1.2\n",
+      "temperature: 0.7\n",
+      "top_p: 0.9\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "config = load_config()\n",
+    "print('Loaded configuration:')\n",
+    "print('\\nGeneration parameters:')\n",
+    "print(yaml.dump(config['generation'], default_flow_style=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3b90b95",
+   "metadata": {},
+   "source": [
+    "## 準備數據\n",
+    "\n",
+    "從 RoyalTek 網站抓取數據進行測試"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "aae13405",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieved 29 text passages\n"
+     ]
+    }
+   ],
+   "source": [
+    "urls = [\n",
+    "    'https://www.royaltek.com/about/whoweare/',\n",
+    "    'https://www.royaltek.com/about/services/',\n",
+    "    'https://www.royaltek.com/about/thecompany/'\n",
+    "]\n",
+    "\n",
+    "passages = scrape_and_chunk_website(urls, 300, 35)\n",
+    "print(f'Retrieved {len(passages)} text passages')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7764b7bb",
+   "metadata": {},
+   "source": [
+    "## 準備測試問題"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e372b276",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queries = [\n",
+    "    'What products does Royaltek offer?',\n",
+    "    'In what year was RoyalTek founded?',\n",
+    "    'What types of products does RoyalTek offer for the automotive industry?',\n",
+    "    'How has RoyalTek benefited from being part of Quanta Inc. since 2006?',\n",
+    "    'What is RoyalTek\\'s approach to customer service and product delivery?',\n",
+    "    'What technologies does RoyalTek integrate into their solutions for location awareness and vehicle safety?'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1df6b593",
+   "metadata": {},
+   "source": [
+    "## 運行 T5 Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3866dee3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using the default legacy behaviour of the <class 'transformers.models.t5.tokenization_t5.T5Tokenizer'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thoroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "Starting T5 Pipeline\n",
+      "Encoder: all-MiniLM-L6-v2\n",
+      "Generator: google/flan-t5-large\n",
+      "==================================================\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90d49879546446ccbaef134053112d48",
+       "model_id": "a7e97fbeeed34a2ba82db19d4d0cad6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -45,79 +176,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added 14 documents to the index.\n",
-      "==================================================\n",
+      "Added 29 documents to the index.\n",
       "\n",
-      "Question1: What clause did SoundCloud add to its terms of use in February 2024 regarding AI?\n",
+      "Question: What products does Royaltek offer?\n",
+      "Answer: satellite positioning and wireless communication technology, with a focus on providing advanced solutions for location awareness, automotive radar.\n",
       "\n",
-      "Context1: Earlier this week, an article published in the tech news outlet Futurism drew attention to a previously unidentified clause in SoundCloud’s terms of use, which allows content uploaded to the site to be used as training data for AI.\n",
+      "Question: In what year was RoyalTek founded?\n",
+      "Answer: I cannot find this information in the context. Founded in 1997, we have established a of the societies\n",
       "\n",
-      "Answer1: allows content uploaded to the site to be used as training data\n",
-      "==================================================\n",
+      "Question: What types of products does RoyalTek offer for the automotive industry?\n",
+      "Answer: Internet of Vehicle (IOV), Advanced Driving Assistance System (ADAS) solution, automotive radar and cloud technology.\n",
       "\n",
-      "Question2: Has SoundCloud used artist content to train AI models according to their official statement?\n",
+      "Question: How has RoyalTek benefited from being part of Quanta Inc. since 2006?\n",
+      "Answer: access to top-down integration of technology with manufacturing facilities in Taiwan and Shanghai. strong>\n",
       "\n",
-      "Context2: SoundCloud has never used artist content to train AI models, nor do we develop AI tools or allow third parties to scrape or use SoundCloud content from our platform for AI training purposes. In fact, we implemented technical safeguards, including a “no AI” tag on our site to explicitly prohibit unauthorized use.\n",
+      "Question: What is RoyalTek's approach to customer service and product delivery?\n",
+      "Answer: Our product delivery process is efficient and reliable, ensuring that our customers receive their orders on time and in excellent condition.\n",
       "\n",
-      "Answer2: never\n",
-      "==================================================\n",
-      "\n",
-      "Question3: What are the intended AI use cases described by SoundCloud?\n",
-      "\n",
-      "Context3: The February 2024 update to our Terms of Service was intended to clarify how content may interact with AI technologies within SoundCloud’s own platform. Use cases include personalized recommendations, content organization, fraud detection, and improvements to content identification with the help of AI Technologies.\n",
-      "\n",
-      "Answer3: personalized recommendations , content organization , fraud detection , and improvements to content identification\n"
+      "Question: What technologies does RoyalTek integrate into their solutions for location awareness and vehicle safety?\n",
+      "Answer: Artificial Intelligence of Things (AIoT) and cloud technology, Internet of Vehicle (IOV), Advanced Driving Assistance System (ADAS) solution, automotive radar and other devices.\n"
      ]
     }
    ],
    "source": [
-    "url = 'https://pitchfork.com/news/soundcloud-addresses-terms-of-use-allowing-ai-training-on-uploaded-music/'\n",
-    "headers = {\n",
-    "    'User-Agent': 'Mosilla/5.0'\n",
-    "}\n",
-    "response = requests.get(url, headers=headers)\n",
-    "soup = BeautifulSoup(response.content, 'html.parser')\n",
-    "passages =[p.text for p in soup.find_all('p')]\n",
-    "# 問題\n",
-    "queries = [\n",
-    "    'What clause did SoundCloud add to its terms of use in February 2024 regarding AI?',\n",
-    "    'Has SoundCloud used artist content to train AI models according to their official statement?',\n",
-    "    'What are the intended AI use cases described by SoundCloud?',\n",
-    "]\n",
-    "\n",
-    "rag1 = CustomRAGPipeline(\n",
-    "        encoder_model_name='all-MiniLM-L6-v2',\n",
-    "        qa_model_name='Raghan/bert-finetuned-squad',\n",
-    "        )\n",
-    "\n",
-    "rag1.add_documents(passages)\n",
-    "# retrieved_passages = rag1.search(queries)\n",
-    "rag1.answer_questions(queries)"
+    "run_rag_pipeline_t5(passages, queries)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "af9402f9",
+   "id": "0f1105f5",
    "metadata": {},
    "source": [
-    "### 使用 SQuAD 資料集"
+    "## 運行 GPT (Falcon) Pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "f07744c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56792c47743c434ca6ebfabcfb7233c8",
+       "model_id": "ae1afa15700f49f0bcec99cc0565265e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Batches:   0%|          | 0/65 [00:00<?, ?it/s]"
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -127,52 +234,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added 2067 documents to the index.\n",
+      "\n",
       "==================================================\n",
-      "\n",
-      "Question1: How does Newton’s Second Law define mass?\n",
-      "\n",
-      "Context1: Newton's Second Law asserts the direct proportionality of acceleration to force and the inverse proportionality of acceleration to mass. Accelerations can be defined through kinematic measurements. However, while kinematics are well-described through reference frame analysis in advanced physics, there are still deep questions that remain as to what is the proper definition of mass. General relativity offers an equivalence between space-time and mass, but lacking a coherent theory of quantum gravity, it is unclear as to how or whether this connection is relevant on microscales. With some justification, Newton's second law can be taken as a quantitative definition of mass by writing the law as an equality; the relative units of force and mass then are fixed.\n",
-      "\n",
-      "Answer1: by writing the law as an equality\n",
+      "Starting GPT (Falcon-7B) Pipeline\n",
+      "Encoder: all-mpnet-base-v2\n",
+      "Generator: tiiuae/falcon-7b-instruct\n",
       "==================================================\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "49cf5751aa1c4c9581c1d3ef1e7a89f2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added 29 documents to the index.\n",
       "\n",
-      "Question2: What was the main theme of Martin Luther’s final sermon?\n",
+      "Question: What products does Royaltek offer?\n",
+      "Answer:  Royaltek offers a wide range of products, including GPS navigation systems, rear-view cameras, and dash cameras. These products are designed to help drivers stay connected and safe on the road.\n",
       "\n",
-      "Context2: The effect of Luther's intervention was immediate. After the sixth sermon, the Wittenberg jurist Jerome Schurf wrote to the elector: \"Oh, what joy has Dr. Martin's return spread among us! His words, through divine mercy, are bringing back every day misguided people into the way of the truth.\"\n",
+      "Question: In what year was RoyalTek founded?\n",
+      "Answer: \n",
+      "1997.\n",
       "\n",
-      "Answer2: divine mercy , are bringing back every day misguided people into the way of the truth\n",
-      "==================================================\n",
+      "Question: What types of products does RoyalTek offer for the automotive industry?\n",
+      "Answer: \n",
+      "Royaltek offers a wide range of products for the Automotive industry, including:\n",
       "\n",
-      "Question3: Which religion became dominant during the Yuan dynasty under Kublai Khan?\n",
+      "- Automotive Radars\n",
+      "- Electronic Control Units (ECUs)\n",
+      "- Engine Management Systems\n",
+      "- Exhaust Gas Recirculation (EGR) systems\n",
+      "- Oxygen Sensors\n",
+      "- Throttle Position Sensors (TPS) \n",
+      "- Mass Air Flow (MAF) sensors\n",
+      "- Spark Plugs\n",
+      "- Ignition Coils\n",
+      "- Fuel Injectors\n",
+      "- Clutch Master Cylinders\n",
+      "- Flywheels\n",
+      "- Brake Calipers\n",
+      "- Power Steering Pumps\n",
+      "- Drive Shafts\n",
+      "- Differential Covers\n",
+      "- Transmission Coolers\n",
       "\n",
-      "Context3: There were many religions practiced during the Yuan dynasty, such as Buddhism, Islam, and Christianity. The establishment of the Yuan dynasty had dramatically increased the number of Muslims in China. However, unlike the western khanates, the Yuan dynasty never converted to Islam. Instead, Kublai Khan, the founder of the Yuan dynasty, favored Buddhism, especially the Tibetan variants. As a result, Tibetan Buddhism was established as the de facto state religion. The top-level department and government agency known as the Bureau of Buddhist and Tibetan Affairs (Xuanzheng Yuan) was set up in Khanbaliq (modern Beijing) to supervise Buddhist monks throughout the empire. Since Kublai Khan only esteemed the Sakya sect of Tibetan Buddhism, other religions became less important. He and his successors kept a Sakya Imperial Preceptor (Dishi) at court. Before the end of the Yuan dynasty, 14 leaders of the Sakya sect had held the post of Imperial Preceptor, thereby enjoying special power. Furthermore, Mongol patronage of Buddhism resulted in a number of monuments of Buddhist art. Mongolian Buddhist translations, almost all from Tibetan originals, began on a large scale after 1300. Many Mongols of the upper class such as the Jalayir and the Oronar nobles as well as the emperors also patronized Confucian scholars and institutions. A considerable number of Confucian and Chinese historical works were translated into the Mongolian language.\n",
       "\n",
-      "Answer3: Buddhism\n"
+      "Question: How has RoyalTek benefited from being part of Quanta Inc. since 2006?\n",
+      "Answer: \n",
+      "Since joining Quanta, Royaltek has been able to expand its product offerings and increase its global reach. Quanta has helped the company to establish a strong supply chain network, allowing them to better serve their customers and maintain their competitive edge in the market. In addition, Quanta's financial\n",
+      "support has enabled Royaltek to invest in new product development and R&D initiatives. Overall, the partnership has been mutually beneficial for both companies, leading to a long-term relationship.\n",
+      "\n",
+      "Question: What is RoyalTek's approach to customer service and product delivery?\n",
+      "Answer: \n",
+      "\n",
+      "Royaltek's customer service approach is based on the principle of \"customer first\". We strive to provide our customers with the highest quality products and services possible. Our customer service team is available 24/7 to answer any questions or concerns our customers may have. \n",
+      "\n",
+      "As for product delivery, we have a well-established supply chain system that allows us to efficiently and reliably deliver our products to our customers on time. Our products are rigorously tested to ensure that they meet our high quality standards before they are delivered to our clients.\n",
+      "User \n",
+      "\n",
+      "Question: What technologies does RoyalTek integrate into their solutions for location awareness and vehicle safety?\n",
+      "Answer: \n",
+      "Royaltek integrates technologies such as GPS, LBS, Radar, AI, and Cloud Computing to provide location-aware and vehicle-safe solutions. These technologies are used to provide accurate real-time location data, improve driving safety, and enhance the overall driving experience.\n"
      ]
     }
    ],
    "source": [
-    "dataset_name = 'squad'\n",
-    "dataset = load_dataset(dataset_name, split='validation')\n",
-    "passages = [item['context'] for item in dataset]\n",
-    "# 排除相同的context\n",
-    "passages = list(set(passages))\n",
-    "# \n",
-    "queries = [\n",
-    "    'How does Newton’s Second Law define mass?',\n",
-    "    'What was the main theme of Martin Luther’s final sermon?',\n",
-    "    'Which religion became dominant during the Yuan dynasty under Kublai Khan?',\n",
-    "]\n",
-    "\n",
-    "rag2 = CustomRAGPipeline(\n",
-    "        encoder_model_name='all-MiniLM-L6-v2',\n",
-    "        qa_model_name='Raghan/bert-finetuned-squad',\n",
-    "        )\n",
-    "\n",
-    "rag2.add_documents(passages)\n",
-    "# retrieved_passages = rag2.search(queries)\n",
-    "rag2.answer_questions(queries)"
+    "run_rag_pipeline_gpt(passages, queries)"
    ]
   }
  ],
