--- a/3-rag/customized.ipynb
+++ b/3-rag/customized.ipynb
@@ -161,7 +161,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7e97fbeeed34a2ba82db19d4d0cad6e",
+       "model_id": "3b996522094a4a90862cf9e7a5987b93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,24 +182,26 @@
       "Answer: satellite positioning and wireless communication technology, with a focus on providing advanced solutions for location awareness, automotive radar.\n",
       "\n",
       "Question: In what year was RoyalTek founded?\n",
-      "Answer: I cannot find this information in the context. Founded in 1997, we have established a of the societies\n",
+      "Answer: 1997, we have established a of the societies. With such strong determination and ambition, RoyalTek is confident\n",
       "\n",
       "Question: What types of products does RoyalTek offer for the automotive industry?\n",
       "Answer: Internet of Vehicle (IOV), Advanced Driving Assistance System (ADAS) solution, automotive radar and cloud technology.\n",
       "\n",
       "Question: How has RoyalTek benefited from being part of Quanta Inc. since 2006?\n",
-      "Answer: access to top-down integration of technology with manufacturing facilities in Taiwan and Shanghai. strong>\n",
+      "Answer: access to top-down integration of technology with manufacturing facilities in Taiwan and Shanghai. Our product range includes Audio Video Navigation System (AVN), Portable Navigation Device\n",
       "\n",
       "Question: What is RoyalTek's approach to customer service and product delivery?\n",
       "Answer: Our product delivery process is efficient and reliable, ensuring that our customers receive their orders on time and in excellent condition.\n",
       "\n",
       "Question: What technologies does RoyalTek integrate into their solutions for location awareness and vehicle safety?\n",
-      "Answer: Artificial Intelligence of Things (AIoT) and cloud technology, Internet of Vehicle (IOV), Advanced Driving Assistance System (ADAS) solution, automotive radar and other devices.\n"
+      "Answer: Artificial Intelligence of Things (AIoT) and cloud technology, RoyalTek focuses on the researchof products related to Internet of Vehicle (IOV), Advanced Driving Assistance System (ADAS) solution, automotive radar and other devices\n"
      ]
     }
    ],
    "source": [
-    "run_rag_pipeline_t5(passages, queries)"
+    "for i, answer in enumerate(run_rag_pipeline_t5(passages, queries)):\n",
+    "    print(f'\\nQuestion: {queries[i]}')\n",
+    "    print(f'Answer: {answer}')"
    ]
   },
   {
@@ -219,7 +221,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae1afa15700f49f0bcec99cc0565265e",
+       "model_id": "34abfa20c14c4ac98a584ad3e9cdf2de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,7 +248,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49cf5751aa1c4c9581c1d3ef1e7a89f2",
+       "model_id": "c5f8b77258674b43bd3d80b2d765743f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -264,56 +266,46 @@
       "Added 29 documents to the index.\n",
       "\n",
       "Question: What products does Royaltek offer?\n",
-      "Answer:  Royaltek offers a wide range of products, including GPS navigation systems, rear-view cameras, and dash cameras. These products are designed to help drivers stay connected and safe on the road.\n",
+      "Answer:  Royaltek offers a wide range of products, including GPS navigation systems, wireless communication devices, and automotive radar systems. These products are designed to meet the needs of both consumers and businesses.\n",
       "\n",
       "Question: In what year was RoyalTek founded?\n",
       "Answer: \n",
-      "1997.\n",
+      "1997\n",
       "\n",
       "Question: What types of products does RoyalTek offer for the automotive industry?\n",
       "Answer: \n",
       "Royaltek offers a wide range of products for the Automotive industry, including:\n",
       "\n",
-      "- Automotive Radars\n",
-      "- Electronic Control Units (ECUs)\n",
-      "- Engine Management Systems\n",
-      "- Exhaust Gas Recirculation (EGR) systems\n",
-      "- Oxygen Sensors\n",
-      "- Throttle Position Sensors (TPS) \n",
-      "- Mass Air Flow (MAF) sensors\n",
-      "- Spark Plugs\n",
-      "- Ignition Coils\n",
-      "- Fuel Injectors\n",
-      "- Clutch Master Cylinders\n",
-      "- Flywheels\n",
-      "- Brake Calipers\n",
-      "- Power Steering Pumps\n",
-      "- Drive Shafts\n",
-      "- Differential Covers\n",
-      "- Transmission Coolers\n",
+      "- Automotive Radar\n",
+      "- Blind Spot Detection System\n",
+      "- Lane Departure Warning System \n",
+      "- Automatic Emergency Braking\n",
+      "- Adaptive Cruise Control\n",
+      "- Driver Assistance System\n",
       "\n",
+      "These products are designed to enhance the driving experience and improve safety on the road.\n",
       "\n",
       "Question: How has RoyalTek benefited from being part of Quanta Inc. since 2006?\n",
       "Answer: \n",
-      "Since joining Quanta, Royaltek has been able to expand its product offerings and increase its global reach. Quanta has helped the company to establish a strong supply chain network, allowing them to better serve their customers and maintain their competitive edge in the market. In addition, Quanta's financial\n",
-      "support has enabled Royaltek to invest in new product development and R&D initiatives. Overall, the partnership has been mutually beneficial for both companies, leading to a long-term relationship.\n",
+      "Since joining Quanta, Royaltek has been able to expand its product range, improve its manufacturing capabilities, and increase its global reach. Quanta has provided Royaltek with access to a wide range of resources, including advanced manufacturing equipment, supply chain expertise, and\n",
+      "technical support. This has allowed Royaltek to increase its efficiency and reduce its costs, while also helping it to stay ahead of the competition. Additionally Quanta's vast experience in the electronics industry has allowed them to help Royaltek innovate and develop new products, which has been a key\n",
+      "factor in their success.\n",
       "\n",
       "Question: What is RoyalTek's approach to customer service and product delivery?\n",
       "Answer: \n",
       "\n",
-      "Royaltek's customer service approach is based on the principle of \"customer first\". We strive to provide our customers with the highest quality products and services possible. Our customer service team is available 24/7 to answer any questions or concerns our customers may have. \n",
-      "\n",
-      "As for product delivery, we have a well-established supply chain system that allows us to efficiently and reliably deliver our products to our customers on time. Our products are rigorously tested to ensure that they meet our high quality standards before they are delivered to our clients.\n",
-      "User \n",
+      "Royaltek's customer service approach is based on the principle of \"customer first\". The company strives to provide the best possible service to its customers, focusing on meeting their needs and expectations. In terms of product delivery, Royaltek places a strong emphasis on quality and reliability. The company works closely with its suppliers and partners to ensure that its products are of the highest quality and meet its customers' expectations. Additionally\n",
       "\n",
       "Question: What technologies does RoyalTek integrate into their solutions for location awareness and vehicle safety?\n",
       "Answer: \n",
-      "Royaltek integrates technologies such as GPS, LBS, Radar, AI, and Cloud Computing to provide location-aware and vehicle-safe solutions. These technologies are used to provide accurate real-time location data, improve driving safety, and enhance the overall driving experience.\n"
+      "Royaltek integrates technologies such as GPS, LBS, Radar, AI, and Cloud Computing to provide location-aware and vehicle-safe solutions for their customers.\n"
      ]
     }
    ],
    "source": [
-    "run_rag_pipeline_gpt(passages, queries)"
+    "for i, answer in enumerate(run_rag_pipeline_gpt(passages, queries)):\n",
+    "    print(f'\\nQuestion: {queries[i]}')\n",
+    "    print(f'Answer: {answer}')"
    ]
   }
  ],
